# paper-trading

./: .gitignore  HYBRID_EXECUTION_PLAN.md  HYBRID_STRATEGY.md  OVERVIEW.md  PLAN.md  README.md  SYSTEM_UPGRADE_PLAN.md  TEST_PLAN.md  TRADING_STRATEGIES.md  paper_trading.db  paper_trading.db-shm  paper_trading.db-wal
backend/: .env.example  paper_trading.db-shm  paper_trading.db-wal  pyproject.toml
backend/app/: config.py  database.py  db_maintenance.py  default_strategies.py  logging_utils.py  main.py
backend/app/ai/: __init__.py  advisor.py  client.py  costs.py  parser.py  prompts.py  (+3 more)
backend/scripts/: cleanup_runtime_data.py  close_stablecoin_positions.py  diagnose_missed_coins.py  migrate_review_tables.py  seed_strategies.py
backend/tests/: conftest.py  test_ai_logs.py  test_app.py  test_binance_ws.py  test_composite_scorer.py  test_config.py  test_data_store.py  test_database_write_lock.py  test_db_maintenance.py  test_default_strategies.py  test_economic_viability.py  test_executor.py  test_exit_manager.py  test_fee_model.py  test_indicators.py  test_integration.py  test_liquidity_policy.py  test_logging_utils.py  test_market_api.py  test_multi_coin.py  test_phase3_ai.py  test_position_sizer.py  test_risk_management.py  test_scanner.py  test_scanner_api.py  test_scanner_liquidity_policy.py  test_shutdown_behavior.py  test_slippage.py  test_strategies.py  test_strategy_coordination.py  test_symbol_evaluation_logs.py  test_tradability.py  test_trading_loop_hybrid.py  test_trading_loop_locks.py  test_universe_selector.py  test_wallet_manager.py  test_whatsapp.py
(+156 files in other folders)
