[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-trading-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the crypto paper-trading app."
requires-python = ">=3.9"
dependencies = [
  "aiosqlite>=0.20.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "websockets>=12.0,<14.0",
  "httpx>=0.27.0,<1.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "twilio>=9.0.0,<10.0.0",
  "eval_type_backport>=0.2.0;python_version<'3.10'",
  "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
